[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "STEXI"
version = "0.3.0"
description = "(S)patial (T)ranscriptomics (Ex)pression (I)mputation"
authors = [
    { name = "Christian Kolland", email = "christian.kolland@stud.uni-frankfurt.de" }
]
dependencies = []

[project.scripts]
preprocess = "preprocess.preprocess:main"
fit = "fit.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
