[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "STEXI"
version = "1.0.0"
description = "(S)patial (T)ranscriptomics (Ex)pression (I)mputation is a deep learning toolkit for imputation of spatial transcriptomics data, supporting flexible preprocessing, model training, and evaluation workflows. It is designed for scalable, GPU-accelerated analysis of large single-cell and spatial omics datasets."
authors = [
    { name = "Christian Kolland", email = "christian.kolland@stud.uni-frankfurt.de" }
]
dependencies = [
    "numpy>=1.21",
    "pandas>=1.3",
    "scipy>=1.7",
    "anndata>=0.8",
    "torch>=2.0",
    "scikit-learn>=1.0",
    "tqdm>=4.62",
    "pyyaml>=6.0",
    "matplotlib>=3.4",
    "seaborn>=0.11"
]

[project.scripts]
preprocess = "preprocess.cli:main"
fit = "fit_model.cli:main"
test = "test_model.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
